--- a/JornadaApi/JornadaApi.csproj
+++ b/JornadaApi/JornadaApi.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
+
 </Project>
